--- a/notebooks/116-sparsity-optimization/116-sparsity-optimization.ipynb
+++ b/notebooks/116-sparsity-optimization/116-sparsity-optimization.ipynb
@@ -1,21 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cacbe6b4",
    "metadata": {
     "id": "rQc-wXjqrEuR"
    },
    "source": [
-    "# Accelerate Inference of Sparse Transformer Models with OpenVINO™ and 4th Gen Intel&reg; Xeon&reg; Scalable Processors\n",
-    "This tutorial demonstrates how to improve performance of sparse Transformer models with [OpenVINO](https://docs.openvino.ai/) on 4th Gen Intel® Xeon® Scalable processors. It uses a pre-trained model from the [Hugging Face Transformers](https://huggingface.co/transformers/) library and shows how to convert it to the OpenVINO™ IR format and run inference on a CPU using a dedicated runtime option that enables sparsity optimizations. It also demonstrates how to get more performance stacking sparsity with 8-bit quantization. To simplify the user experience, the [Hugging Face Optimum](https://huggingface.co/docs/optimum) library is used to convert the model to OpenVINO™ IR format and quantize it using [Neural Network Compression Framework](https://github.com/openvinotoolkit/nncf). It consists of the following steps:\n",
+    "# Accelerate Inference of sparse Transformer models with OpenVINO™ and 4th Gen Intel&reg; Xeon&reg; Scalable processors\n",
+    "This tutorial demonstrates how to improve performance of sparse Transformer models with [OpenVINO](https://docs.openvino.ai/) on 4th Gen Intel® Xeon® Scalable processors. It uses a pre-trained model from the [HuggingFace Transformers](https://huggingface.co/transformers/) library and shows how to convert it to the OpenVINO™ IR format and run inference of the model on the CPU using a dedicated runtime option that enables sparsity optimizations. It also demonstrates how to get more performance stacking sparsity with 8-bit quantization. To simplify the user experience, the [HuggingFace Optimum](https://huggingface.co/docs/optimum) library is used to convert the model to the OpenVINO™ IR format and quantize it using [Neural Network Compression Framework](https://github.com/openvinotoolkit/nncf). It consists of the following steps:\n",
     "\n",
     "- Install prerequisites\n",
-    "- Download and quantize sparse BERT model from a public source using the OpenVINO integration with Hugging Face Optimum.\n",
+    "- Download and quantize sparse BERT model from the public using HuggingFace Optimum for OpenVINO.\n",
     "- Compare sparse 8-bit vs. dense 8-bit inference performance.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7bef22e9",
    "metadata": {},
@@ -30,7 +32,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install optimum[openvino] datasets"
+    "!pip install optimum[openvino]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36c6bb01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import nncf  # noqa: F401\n",
+    "except ImportError:\n",
+    "    !pip install git+https://github.com/openvinotoolkit/nncf.git#egg=nncf"
    ]
   },
   {
@@ -48,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from functools import partial\n",
     "from pathlib import Path\n",
     "\n",
@@ -63,8 +79,8 @@
    "id": "7603a481",
    "metadata": {},
    "source": [
-    "## Quantize the model using Hugging Face Optimum API\n",
-    "The sparsity acceleration MatMul operations are only available cases when these operations are quantized into 8-bit precision. If the model is not in 8-bit precision, it can be quantized using either method available for OpenVINO models. For more details, please refer to the [Model Optimization Guide](https://docs.openvino.ai/latest/openvino_docs_model_optimization_guide.html). In this tutorial we use the Hugging Face Optimum API to quantize the model. The Hugging Face Optimum API is a high-level API that allows us to convert and quantize models from the Hugging Face Transformers library to the OpenVINO™ IR format. For more details refer to the [Hugging Face Optimum documentation](https://huggingface.co/docs/optimum/intel/optimization_ov)."
+    "## Quantize model with HuggingFace Optimum API\n",
+    "The sparsity acceleration MatMul operations is available only in the case when these operations are quantized into 8-bit precision. If the model is not quantized it can be done using either way availble for OpenVINO models. For more details refer [here](https://docs.openvino.ai/latest/openvino_docs_model_optimization_guide.html). In this tutorial we use the HuggingFace Optimum API to quantize the model. The HuggingFace Optimum API is a high-level API that allows to convert and quantize models from the HuggingFace Transformers library to the OpenVINO™ IR format. For more details refer to the [HuggingFace Optimum documentation](https://huggingface.co/docs/optimum/intel/optimization_ov)."
    ]
   },
   {
@@ -74,13 +90,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = \"neuralmagic/oBERT-12-downstream-pruned-unstructured-90-mnli\"\n",
-    "quantized_sparse_dir = Path(\"bert_90_sparse_quantized\")\n",
+    "model_id = \"yujiepan/bert-base-uncased-sst2-unstructured-sparsity-80\"\n",
+    "quantized_sparse_dir = Path(\"bert_80_sparse_quantized\")\n",
     "\n",
     "# Instantiate model and tokenizer in PyTorch and load them from the HF Hub\n",
     "torch_model = AutoModelForSequenceClassification.from_pretrained(model_id)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "\n",
     "\n",
     "def preprocess_function(examples, tokenizer):\n",
     "    \"\"\"\n",
@@ -91,10 +106,10 @@
     "    :returns:\n",
     "            the data that can be fed directly to the model.\n",
     "    \"\"\"\n",
+    "    \n",
     "    return tokenizer(\n",
-    "        examples[\"premise\"], examples[\"hypothesis\"], padding=\"max_length\", max_length=128, truncation=True\n",
+    "        examples[\"sentence\"], padding=\"max_length\", max_length=128, truncation=True\n",
     "    )\n",
-    "\n",
     "\n",
     "# Create quantization config (default) and OVQuantizer\n",
     "# OVConfig is a wrapper class on top of NNCF config. \n",
@@ -105,10 +120,10 @@
     "\n",
     "# Instantiate a dataset and convert it to calibration dataset using HF API\n",
     "# The latter one produces a model input\n",
-    "dataset = load_dataset(\"glue\", \"mnli\")\n",
+    "dataset = load_dataset(\"glue\", \"sst2\")\n",
     "calibration_dataset = quantizer.get_calibration_dataset(\n",
     "    \"glue\",\n",
-    "    dataset_config_name=\"mnli\",\n",
+    "    dataset_config_name=\"sst2\",\n",
     "    preprocess_function=partial(preprocess_function, tokenizer=tokenizer),\n",
     "    num_samples=100,\n",
     "    dataset_split=\"train\",\n",
@@ -138,12 +153,11 @@
     "# Dump benchmarking config for dense inference\n",
     "with open(\"perf_config.json\", \"w\") as outfile:\n",
     "    outfile.write(\n",
-    "        \"\"\"\n",
-    "        {\n",
-    "            \"CPU\": {\"NUM_STREAMS\": 4, \"INFERENCE_NUM_THREADS\": 4}\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "    )"
+    "\"\"\"\n",
+    "{\n",
+    "    \"CPU\": {\"NUM_STREAMS\": 4, \"INFERENCE_NUM_THREADS\": 4}\n",
+    "}\n",
+    "\"\"\")"
    ]
   },
   {
@@ -153,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!benchmark_app -m bert_90_sparse_quantized/openvino_model.xml -shape \"input_ids[1,16],attention_mask[1,16],token_type_ids[1,16]\" -load_config perf_config.json"
+    "!benchmark_app -m $quantized_sparse_dir/openvino_model.xml -shape \"input_ids[1,16],attention_mask[1,16],token_type_ids[1,16]\" -load_config perf_config.json"
    ]
   },
   {
@@ -176,12 +190,11 @@
     "# for sparse optimization at the runtime.\n",
     "with open(\"perf_config_sparse.json\", \"w\") as outfile:\n",
     "    outfile.write(\n",
-    "        \"\"\"\n",
-    "        {\n",
-    "            \"CPU\": {\"NUM_STREAMS\": 4, \"INFERENCE_NUM_THREADS\": 4, \"CPU_SPARSE_WEIGHTS_DECOMPRESSION_RATE\": 0.8}\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "    )"
+    "\"\"\"\n",
+    "{\n",
+    "    \"CPU\": {\"NUM_STREAMS\": 4, \"INFERENCE_NUM_THREADS\": 4, \"CPU_SPARSE_WEIGHTS_DECOMPRESSION_RATE\": 0.8}\n",
+    "}\n",
+    "\"\"\")"
    ]
   },
   {
@@ -191,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!benchmark_app -m bert_90_sparse_quantized/openvino_model.xml -shape \"input_ids[1,16],attention_mask[1,16],token_type_ids[1,16]\" -load_config perf_config_sparse.json"
+    "!benchmark_app -m $quantized_sparse_dir/openvino_model.xml -shape \"input_ids[1,16],attention_mask[1,16],token_type_ids[1,16]\" -load_config perf_config_sparse.json"
    ]
   },
   {
@@ -209,7 +222,7 @@
    "source": [
     "This feauture can improve inference performance for models with sparse weights in the scenarios when the model is deployed to handle multiple requests in parallel asyncronously. It is especially helpful in the case of small sequence length, e.g. 32 and lower.\n",
     "\n",
-    "For more details about asynchronous inference with OpenVINO please refer to the following documentation:\n",
+    "For more details about the asynchronous inference with OpenVINO refer to the following documentation:\n",
     "- [Deployment Optimization Guide](https://docs.openvino.ai/latest/openvino_docs_deployment_optimization_guide_common.html#doxid-openvino-docs-deployment-optimization-guide-common-1async-api)\n",
     "- [Inference Request API](https://docs.openvino.ai/latest/openvino_docs_OV_UG_Infer_request.html#doxid-openvino-docs-o-v-u-g-infer-request-1in-out-tensors)"
    ]
@@ -217,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ov_notebooks",
    "language": "python",
    "name": "python3"
   },
@@ -231,11 +244,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fe409241748dff4afe127d33bbdaaa11b54ce82261ed669fd8a0538ea98c62f7"
+    "hash": "25fad543ad216e1bba3a2237c544f0cea27ae49559091fac659fb84d6cd5fdd7"
    }
   }
  },
